--- a/public/stylesheets/auth.css
+++ b/public/stylesheets/auth.css
@@ -3,16 +3,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 1rem;
 }
 
 form {
   background-color: #ffffff;
-  padding: 3rem 1.5rem;
-  border-radius: 10px;
+  padding: 2.5rem 1.5rem;
+  border-radius: 5px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   width: 100%;
-  max-width: 350px;
   height: fit-content;
   border: 1px solid #d0d0d0;
   box-sizing: border-box;
@@ -20,6 +18,13 @@ form {
 .sign-up {
   padding: 2rem 2rem;
   max-width: 400px;
+  max-height: 400px;
+  overflow-y: auto;
+}
+.sign-in {
+  padding: 2rem 2rem;
+  max-width: 400px;
+  max-height: 400px;
 }
 
 h2 {
@@ -70,7 +75,8 @@ button:disabled {
   cursor: not-allowed;
 }
 
-#switch {
+#otherAuth {
+  margin-top: 1rem;
   font-size: 0.85rem;
   text-align: center;
 }
@@ -84,48 +90,33 @@ a {
   text-decoration: none;
 }
 
-.name-row {
-  display: flex;
-  gap: 1rem;
-  width: 100%;
-  margin-bottom: 0.01rem;
-}
-
-.name-row label {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  font-weight: bold;
-  color: #333;
-}
-
 .phone-input-wrapper {
-  position: relative;
+  display: flex;
+  gap: 0.3rem; 
   width: 100%;
+  margin-bottom: 0;
 }
 
 .phone-code {
-  position: absolute;
-  left: 0.75rem;
-  bottom: 0.5rem;
-  display: flex;
-  align-items: center;
-  font-size: 1rem;
+  width: 30%; 
+  height: 2.5rem;
+  border: 1px solid rgb(208, 206, 206);
+  border-radius: 5px;
+  font-size: 0.9rem;
   color: #555;
-  pointer-events: none;
-  height: 100%;
-  font-weight: bold;
+  background-color: transparent;
+  cursor: pointer;
+  text-align: center;
 }
 
 .phone-input-wrapper input {
-  width: 100%;
-  padding: 0.6rem 0.6rem 0.6rem 4rem;
+  flex-grow: 1;
+  height: 2.5rem;
   font-size: 1rem;
   border: 1px solid #bbb;
   border-radius: 5px;
+  padding-left: 0.5rem;
   box-sizing: border-box;
-  height: 2.5rem;
-  line-height: 1.2;
 }
 .switch {
   background: none;
@@ -180,4 +171,14 @@ a {
   margin-top: -0.8rem;
   margin-bottom: 1rem;
   display: block;
+}
+
+.authentication {
+  margin: 0.6rem 0;
+}
+.authentication-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
