--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -1,99 +1,41 @@
-
-.top-wrapper,
-.topNav,
-.sideNav,
-a,
-.toggleBtn {
+.topNav {
   background-color: var(--nav-bg);
   color: var(--text-color);
-}
-
-.top-wrapper {
-  top: 0;
-  width: 100%;
-  margin: 0;
 }
 
 .topNav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 1rem 0.25rem 2rem;
-  position: relative;
   border: none;
+  padding: 1rem;
 }
 
 .topNav-right,
 .topNav-center {
   display: flex;
   align-items: center;
-}
-
-.topNav-left {
-  flex: 0.5;
-  gap: 0.6rem;
-}
-
-.topNav-right {
-  flex: 1;
-  justify-content: flex-end;
-  gap: 0.4rem;
+  justify-content: center;
 }
 
 .topNav-center {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  text-decoration: none;
+  padding: 0;
+  gap: 0.8rem;
 }
 
 img.icon {
   height: 1rem;
   width: 1rem;
+  border-radius: 4px;
 }
 
-.brand-logo,
-.brand-logo-mobile {
-  font-size: 1.5rem;
-  font-weight: bold;
-  text-decoration: none;
-  padding: 0 1rem;
-}
-.brand-logo-mobile {
-  text-align: center;
-  padding: 0;
-  margin-bottom: 1rem;
-  display: block;
-}
-
-.pages-navbar.desktop-navbar {
-  padding: 1rem;
-  display: flex;
-  justify-content: center;
-  gap: 1.5rem;
-  flex-wrap: wrap;
-}
-
-.pages-navbar a {
-  font-family: "Lora", serif;
-  font-size: 1rem;
-  text-decoration: none;
-  font-weight: 400;
-  padding: 0 0.4rem;
-}
-
-.pages-navbar a:hover {
+.topNav a:hover {
   text-decoration: underline;
 }
 
-.brand-logo,
-.pages-navbar a,
-.side-navbar-links a {
+.topNav a {
   color: var(--text-color);
-}
-
-.disabled-link {
-  opacity: 0.4;
-  cursor: not-allowed;
 }
 
 .icon-btn {
@@ -101,97 +43,14 @@ img.icon {
   border: none;
   cursor: pointer;
 }
-.icon-btn:hover {
+.icon-btn:hover,
+#theme:hover {
   background-color: transparent;
 }
 
-.toggleBtn {
-  font-size: 1rem;
-  background: none;
-  border: none;
-  cursor: pointer;
-  width: 20%;
-  padding: 0.5rem 0.1rem 0.5 0.1rem;
-  text-align: center;
-}
-.toggleBtn:hover {
-  background-color: transparent !important;
-}
-.sideNav {
-  position: fixed;
-  top: 0;
-  left: -100vw;
-  height: 100vh;
-  width: 20%;
-  padding: 2rem 3rem;
-  display: none;
-  gap: 1rem;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-  transition: left 0.3s ease-in-out;
-  z-index: 1000;
-}
-
-/* if you are changing padding or margin of pages-navbar you might need to change the following media queries*/
-/* media queries are the one's responsible for showing the nav as a hidden menu for smaller screens*/
-
-@media (min-width: 616px) {
-  .toggleBtn {
-    display: none;
-  }
-}
-
-@media (max-width: 615px) {
-  .pages-navbar.desktop-navbar {
-    display: none;
-  }
-}
-
-@media (max-width: 615px) {
-  .sideNav {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
-.sideNav.open {
-  left: 0;
-}
-
-.side-navbar-links {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-}
-
-.side-navbar-links a {
-  text-decoration: none;
-}
-
-.hide-on-mobile {
-  display: none;
-}
-
-#search,
-#search:hover {
-  background-color: transparent;
-  height: fit-content;
+#theme {
+  margin: 0.4rem 1rem;
   padding: 0;
-}
-
-.search-bar-container {
-  padding: 1rem 1rem;
-  width: 100%;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-}
-
-.search-input {
-  padding: 0 1rem;
-  width: 80%;
-  height: 2.5rem;
-  max-width: 630px;
-  margin-bottom: 0;
-  border: 1px solid #ccc;
-  border-radius: 30px;
+  width: 1%;
+  font-size: 0;
 }
