--- a/public/stylesheets/auth.css
+++ b/public/stylesheets/auth.css
@@ -6,32 +6,16 @@
 }
 
 form {
-  background-color: #ffffff;
-  padding: 2.5rem 1.5rem;
+  background-color: var(--form-color);
+  padding: 2rem 1.5rem;
   border-radius: 5px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   width: 100%;
   height: fit-content;
-  border: 1px solid #d0d0d0;
   box-sizing: border-box;
 }
-.sign-up {
-  padding: 2rem 2rem;
-  max-width: 400px;
-  max-height: 400px;
-  overflow-y: auto;
-}
-.sign-in {
-  padding: 2rem 2rem;
-  max-width: 400px;
-  max-height: 400px;
-}
-
-h2 {
-  font-weight: bold;
-  margin-bottom: 1rem;
-  font-size: 2.5rem;
-  color: var(--text-color);
+form.auth-options {
+  box-shadow: none !important;
 }
 
 label {
@@ -46,7 +30,6 @@ input {
   width: 100%;
   padding: 0.6rem;
   font-size: 1rem;
-  border: 1px solid #bbb;
   border-radius: 5px;
   margin-bottom: 1rem;
   box-sizing: border-box;
@@ -62,8 +45,8 @@ button {
   padding: 0.6rem;
   font-size: 1rem;
   font-weight: 400;
-  color: white;
-  background-color: #6f0101;
+  color: var(--btn-color);
+  background-color: var(--btn-bg);
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -71,7 +54,8 @@ button {
 }
 
 button:disabled {
-  background-color: #d9d9d9;
+  background-color: #efeded;
+  border: 1px solid #ccc;
   cursor: not-allowed;
 }
 
@@ -81,24 +65,15 @@ button:disabled {
   text-align: center;
 }
 
-button:not(:disabled):hover {
-  background-color: #290000;
-}
-
-a {
-  font-weight: bold;
-  text-decoration: none;
-}
-
 .phone-input-wrapper {
   display: flex;
-  gap: 0.3rem; 
+  gap: 0.3rem;
   width: 100%;
   margin-bottom: 0;
 }
 
 .phone-code {
-  width: 30%; 
+  width: 30%;
   height: 2.5rem;
   border: 1px solid rgb(208, 206, 206);
   border-radius: 5px;
@@ -121,17 +96,15 @@ a {
 .switch {
   background: none;
   border: none;
-  color: #290000;
+  color: #290000 !important;
   font-weight: bold;
   cursor: pointer;
   padding: 0;
   font-size: 1em;
   text-decoration: none;
-}
-.switch:hover {
-  background-color: transparent !important;
-  color: #290000;
-  text-decoration: underline;
+  text-align: center;
+  margin-bottom: 0 !important;
+  margin-top: 1rem;
 }
 
 .label-with-icon {
@@ -155,6 +128,11 @@ a {
   line-height: 1rem;
   border: 1px solid #bbb;
 }
+.form-panel p {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  color: #666;
+}
 
 .tooltip-error {
   border: 1px solid #6f0101;
@@ -166,19 +144,106 @@ a {
 }
 
 .error {
-  color: #b00000;
+  color: #b00000 !important;
   font-size: 0.85rem;
   margin-top: -0.8rem;
-  margin-bottom: 1rem;
   display: block;
 }
 
 .authentication {
   margin: 0.6rem 0;
 }
-.authentication-wrapper {
+
+.auth-options {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  margin-top: 2.5rem;
+  margin-right: 1rem;
+  margin-bottom: 0;
+  height: 100%;
+  padding: 1rem;
+  background-color: transparent !important;
+}
+.auth-options button {
+  max-width: 250px;
+}
+
+.authentication-card {
+  display: flex;
+  margin: 3rem 0;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
+  border-radius: 12px;
+  width: 80%;
+  height: 80%;
+  max-height: 600px;
+  max-width: 900px;
+  background: var(--card-bg);
+}
+
+.illustration-panel {
+  flex: 1;
+  position: relative;
+  overflow: hidden;
+  padding: 0.5rem;
+}
+
+.illustration-panel img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border-radius: 5px;
+}
+
+.form-panel {
+  flex: 1;
+  padding: 1rem 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  overflow-y: auto;
+}
+.form-panel h2 {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+@media (max-width: 768px) {
+  .authentication-card {
+    flex-direction: column;
+    width: 400px;
+    padding: 1rem;
+    height: 75%;
+  }
+
+  .illustration-panel {
+    display: none;
+  }
+
+  .form-panel {
+    justify-content: flex-start;
+  }
+
+  .form-panel h2 {
+    font-size: 1.5rem;
+    margin-top: 0.4rem;
+  }
+
+  .form-panel p,
+  label,
+  input,
+  button {
+    font-size: 0.95rem;
+  }
+
+  .phone-input-wrapper {
+    flex-direction: column;
+  }
+
+  .phone-code {
+    width: 100%;
+    margin-bottom: 0.5rem;
+  }
 }
