--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -3,10 +3,9 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 1rem 1rem 2rem;
+  padding: .5rem 1rem;
   background-color: var(--footer-bg);
   color: var(--text-color);
-  padding: 1rem .8rem;
 }
 
 p {
