--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -2,34 +2,144 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  height: 100%;
-  width: 100%;
-  padding: 1rem 1rem 0 1rem;
+  height: 90%;
+  width: 90%;
   margin-bottom: 0;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
+  border-radius: 12px;
+  max-width: 700px;
+  max-height: 400px;
+  overflow: hidden;
+  background-color: var(--card-bg);
 }
 
 .profile-nav {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding: 0 1rem;
-  border-right: 1px solid black;
-  height: 80%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 0.5rem;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
+  height: 100%;
+  cursor: pointer;
 }
 
 h4 {
-  margin: .6rem 0;
-  cursor: pointer;
+  margin: 0.6rem 0;
 }
 .details-wrapper {
+  
+  margin-top: 1rem;
+  padding: 2rem 0 1rem 1rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  height: 80%;
-  padding: 0 0 0 1.5rem;
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
 }
 
 #welcome {
   display: flex;
+  justify-content: flex-start;
+}
+
+#welcome button {
+  width: 10%;
+}
+
+.profile-buttons {
+  display: flex;
+}
+
+.info-wrapper {
+  display: flex;
   align-items: center;
+}
+.info-wrapper h3,
+.info-wrapper p {
+  margin: 0.5rem 0;
+  padding: 0;
+}
+.info-wrapper h3, .info-wrapper h4 {
+  margin-right: 0.4rem;
+}
+.details {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 0;
+}
+
+.edit-profile {
+  width: 60%;
+  overflow: none;
+  padding-bottom: 2rem;
+}
+@media (max-width: 700px) {
+  .edit-profile {
+    width: 100%;
+  }
+}
+
+.password-buttons, .update-buttons {
+  display: flex;
+  gap: 0.5rem;
+}
+.update-buttons {
+  margin-top: 2rem;
+  align-items: flex-end;
+}
+
+.not-found {
+  width: 100%;
+  height:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.portfolio-button {
+  width:50%;
+}
+.portfolio-edit {
+  padding: 1rem 0;
+}
+
+.center-wrapper {
+  align-items: flex-end;
+  margin-bottom: 1rem;
+}
+
+label {
+  color:var(--label-color)
+}
+
+.custom-file-upload {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.custom-file-upload input[type="file"] {
+  display: none;
+}
+
+.upload-button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 14px;
+  font-weight: 600;
+  border-radius: 4px;
+  cursor: pointer;
+  text-align: center;
+  transition: background-color 0.3s ease;
+  background-color: var(--btn-bg);
+  color:var(--btn-color)
+}
+
+
+
+.file-name {
+  font-size: 14px;
 }
