--- a/public/stylesheets/fairs.css
+++ b/public/stylesheets/fairs.css
@@ -5,7 +5,6 @@
   height: 100%;
   width: 100%;
   margin-top: 1rem;
-
   gap: 1rem;
 }
 
@@ -13,10 +12,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80%;
+  height: auto;
   width: 100%;
-  padding: 0;
+  padding: 2rem;
   margin: 0;
+  gap: 1rem;
+  flex-wrap: wrap;
 }
 
 .fair {
@@ -24,11 +25,24 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  height: fit-content;
-  border-radius: 4px;
   padding: 1rem 1rem;
-  border-radius: 5px;
+  border-radius: 8px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
+  width: 33%;
+  height: 20rem;
+  max-width: 22rem;
+  overflow: auto;
+  background-color: var(--card-bg);
+}
+
+.fair h2 {
+  margin-top: 0;
+}
+.fair button {
+  margin: 0.8rem auto;
+  margin-bottom: 0;
+  height: fit-content;
+  width: 100%;
 }
 .fair-img {
   border: 1px solid black;
@@ -38,7 +52,7 @@
   max-width: 4rem;
 }
 .admin-nav {
-  margin: 1rem auto;
+  margin: 0 auto;
   display: flex;
   gap: 1rem;
   margin-bottom: 0;
@@ -49,15 +63,27 @@
 }
 
 .new {
-  overflow-y: auto;
-  padding: 1rem;
+  padding: 2rem 0;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
   border-radius: 12px;
   width: 80%;
   height: 80%;
-  max-height: 600px;
+  max-height: 450px;
+  max-width: 550px;
   background: var(--card-bg);
+  overflow-y: auto;
+}
+
+.new-form-panel {
+  max-width: 450px;
+  padding: 1.5rem 2rem;
+  background-color: transparent !important;
+  overflow-y: auto;
+  margin: 0;
 }
 
 .role {
@@ -69,32 +95,40 @@
   margin: 3rem 0;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
   border-radius: 12px;
-  overflow: auto;
+  overflow-y: auto;
   width: 80%;
   height: 80%;
-  max-width: 500px;
+  max-width: 600px;
+  max-height: 400px;
   padding: 0;
-  background: var(--card-bg);
+  background-color: var(--card-bg);
 }
 .fair-description {
   height: 100%;
   margin: 0;
   align-items: center;
-  padding: 0 1rem;
+  padding: 1rem;
   margin-right: 0.8rem;
   border-radius: 10px;
-  overflow: auto;
+  width: 100%;
 }
 .fair-options {
   margin: 0;
   padding: 0;
+  width: 100%;
+
+}
+.fair-booking {
+  margin: 0;
+  padding: 0;
+  min-width: 400px;
   width: 100%;
 }
 
 .booking-form {
   margin: 0;
   padding-top: 0.5rem;
-  max-width:400px;
+  max-width: 400px;
 }
 .booking-form h1 {
   margin-top: 0;
@@ -102,10 +136,10 @@
 
 .ticket {
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
-
+  min-width:350px;
   border-radius: 5px;
-  padding: 0.6rem 0.8rem;
-  margin: 1rem 0;
+  padding: 0.6rem 1rem;
+  margin: 1rem;
 }
 .ticket button {
   width: 50%;
@@ -113,7 +147,7 @@
 }
 
 .booked-ticket {
-  margin-top: 0.5rem;
+  margin: 0.5rem 1rem 1rem .5rem;
   border-radius: 5px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
   padding: 1rem;
@@ -125,11 +159,26 @@
 }
 .booked-ticket h4 {
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: .5rem;
+  margin-left: 3px;
 }
 .line {
   display: flex;
   justify-content: space-between;
+  
+}
+.line p {
+  margin-left: 3px;
+}
+
+.select-type {
+  margin: 1rem 0;
+
+  border: 1px solid #ced4da;
+  border-radius: 0.375rem; 
+  padding: 0.375rem 2.25rem 0.375rem 0.75rem;
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
 
 .center-button {
@@ -182,14 +231,59 @@ h1 {
 }
 
 h2 {
-    color:var(--accent-color)
+  color: var(--accent-color);
 }
 .center {
-  width:100%;
+  width: 100%;
   display: flex;
   justify-content: center;
+  /* margin: 1rem; */
 }
 
 .center button {
   width: 90%;
+}
+
+.center-open-for-booking {
+  display: flex;
+  gap: 1rem;
+}
+
+.illustration-panel {
+  max-width: 600px;
+  margin-bottom: 1rem;
+}
+
+.edit-fair {
+  height: auto;
+  width: 18%;
+  padding: 0;
+}
+.edit-fair button {
+  height: 100%;
+}
+.description {
+  margin-left: 4px;
+}
+
+.back {
+  margin: 2rem 0;
+}
+
+.description h3 {
+  margin-bottom: 2px;
+}
+.description p {
+  margin-left: 2px;
+}
+
+.guest-div {
+  width: 100%;
+}
+
+.align-vertical {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
