--- a/public/stylesheets/payment.css
+++ b/public/stylesheets/payment.css
@@ -17,11 +17,23 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
+  padding-right: 1rem;
+  padding-top: 1rem;
+  margin-left: 0;
+  min-width: 350px;
+}
+
+.payment-header {
+  display: flex;
+  flex-direction: column;
+}
+.payment-header h3 {
+  margin: 0;
+  margin-bottom: 8px;
 }
 
 .payment-options {
   background-color: var(--bg-color);
-  /* border: 1px solid black; */
   padding: 1rem;
 }
 .form-actions {
