--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -1,40 +1,46 @@
 .profile-wrapper {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  /* align-items: center; */
   height: 90%;
   width: 90%;
   margin-bottom: 0;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
   border-radius: 12px;
   max-width: 700px;
-  max-height: 400px;
-  overflow: hidden;
+  min-height: 400px;
+  max-height: 500px;
+  /* overflow-y: auto; */
+  /* overflow: hidden; */
   background-color: var(--card-bg);
 }
 
 .profile-nav {
+  position: sticky;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  overflow-x: hidden;
+  overflow-y: auto;
   padding: 0 0.5rem;
-  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
-  height: 100%;
   cursor: pointer;
+  height: auto;
+  width: 100px;
 }
 
 h4 {
   margin: 0.6rem 0;
 }
 .details-wrapper {
-  
-  margin-top: 1rem;
-  padding: 2rem 0 1rem 1rem;
+  flex: 1;
+  margin-top: 0.5rem;
+  padding: 1rem 0 1rem 1rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  height: 100%;
+  min-height: 400px;
+  max-height: 500px;
   width: 100%;
   overflow-y: auto;
 }
@@ -61,7 +67,8 @@ h4 {
   margin: 0.5rem 0;
   padding: 0;
 }
-.info-wrapper h3, .info-wrapper h4 {
+.info-wrapper h3,
+.info-wrapper h4 {
   margin-right: 0.4rem;
 }
 .details {
@@ -75,6 +82,10 @@ h4 {
   width: 60%;
   overflow: none;
   padding-bottom: 2rem;
+  margin-left: 1rem;
+}
+.edit-profile label {
+  margin-bottom: 5px;
 }
 @media (max-width: 700px) {
   .edit-profile {
@@ -82,7 +93,8 @@ h4 {
   }
 }
 
-.password-buttons, .update-buttons {
+.password-buttons,
+.update-buttons, .booked-ticket-buttons {
   display: flex;
   gap: 0.5rem;
 }
@@ -93,14 +105,14 @@ h4 {
 
 .not-found {
   width: 100%;
-  height:100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .portfolio-button {
-  width:50%;
+  width: 50%;
 }
 .portfolio-edit {
   padding: 1rem 0;
@@ -112,7 +124,7 @@ h4 {
 }
 
 label {
-  color:var(--label-color)
+  color: var(--label-color);
 }
 
 .custom-file-upload {
@@ -135,10 +147,8 @@ label {
   text-align: center;
   transition: background-color 0.3s ease;
   background-color: var(--btn-bg);
-  color:var(--btn-color)
+  color: var(--btn-color);
 }
-
-
 
 .file-name {
   font-size: 14px;
