--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -9,7 +9,7 @@
   padding: 1rem;
   margin: 0;
   align-items: center;
-  gap:0;
+  gap: 0;
 }
 
 .topNav-right,
@@ -73,4 +73,8 @@ img.icon {
   padding: 0;
   width: 1%;
   font-size: 0;
+}
+
+.profile-icon {
+  filter: drop-shadow(0 0 0.75rem var(--icon-shadow));
 }
