--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -1,17 +1,14 @@
 .profile-wrapper {
   display: flex;
   justify-content: flex-start;
-  /* align-items: center; */
   height: 90%;
   width: 90%;
   margin-bottom: 0;
-  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.12);
   border-radius: 12px;
   max-width: 700px;
   min-height: 400px;
   max-height: 500px;
-  /* overflow-y: auto; */
-  /* overflow: hidden; */
   background-color: var(--card-bg);
 }
 
@@ -107,9 +104,11 @@ h4 {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
 
 .portfolio-button {
   width: 50%;
