--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,28 @@
 body.dark {
-  --bg-color: #1a1a1a;
-  --footer-bg: #1a1a1a;
+  --bg-color: #1f1f1f;
+  --footer-bg: #1f1f1f;
   --text-color: #f3e6e6;
-  --nav-bg: #1a1a1a;
+  --nav-bg: #1f1f1f;
   --card-bg: #242424;
   --form-color: #2a2a2a;
   --btn-bg: #f6e3da;
   --btn-color: black;
   --a-color: #ecdfcc;
   --label-color: #f3e6e6;
+  --accent-color: rgb(64, 23, 23);
+  --icon-shadow:#fff2eb;
 }
 body.light {
-  --bg-color: #f3f2eb;
-  --footer-bg: #f3f2eb;
+  --bg-color: #f1f1f1;
+  --footer-bg: #f1f1f1;
   --text-color: rgb(39, 38, 38);
-  --nav-bg: #f3f2eb;
+  --nav-bg: #f1f1f1;
   --card-bg: #fff2eb;
   --form-color: transparent;
   --btn-bg: #4e0202;
   --btn-color: white;
   --accent-color: rgb(64, 23, 23);
+  --icon-shadow:#4e0202;
 }
 
 body {
