--- a/public/stylesheets/auth.css
+++ b/public/stylesheets/auth.css
@@ -17,13 +17,6 @@ form.auth-options {
   box-shadow: none !important;
 }
 
-label {
-  display: block;
-  margin-bottom: 0.3rem;
-  font-weight: bold;
-  color: #333;
-  text-align: left;
-}
 
 input {
   width: 100%;
@@ -83,7 +76,7 @@ button {
 .switch {
   background: none;
   border: none;
-  color: #290000 !important;
+  color: var(--accent-color) !important;
   font-weight: bold;
   cursor: pointer;
   padding: 0;
@@ -202,21 +195,18 @@ button {
   flex-direction: column;
   justify-content: flex-start;
   gap: 2rem;
-  padding-right: 1rem;
+  padding-right: 2rem;
 }
 .welcome-back {
-  margin-bottom: 0;
+  margin-bottom: 12px;
 }
 .welcome-back h2 {
   margin-bottom: 2px;
 }
 .sign-in-form {
-  margin: 0 1rem 0.5rem .5rem;
+  margin: 0 2rem 0.5rem .5rem;
 }
-/* .form-panel h2 {
-  font-size: 2rem;
-  margin-bottom: 0.5rem;
-} */
+
 
 @media (max-width: 768px) {
   .authentication-card {
@@ -224,7 +214,7 @@ button {
     width: 350px;
     padding: 1rem;
     height: 75%;
-    max-height: 350px;
+    max-height: 500px;
   }
 
   .illustration-panel {
@@ -233,11 +223,23 @@ button {
 
   .form-panel {
     justify-content: flex-start;
+    max-height: 600px;
+  }
+  .sign-in-panel {
+    gap:0;
+    margin-bottom: .5rem;
   }
 
   .form-panel h2 {
     font-size: 1.5rem;
     margin-top: 0.4rem;
+    margin-bottom: 4px !important;
+  }
+  .auth-options{
+    margin: 0;
+  }
+  .center-wrapper {
+    margin-top: 0;
   }
 
   .form-panel p,
