--- a/public/stylesheets/fairs.css
+++ b/public/stylesheets/fairs.css
@@ -88,6 +88,18 @@
 
 .role {
   display: flex;
+  flex-direction: column;
+  margin-bottom: 0.8rem;
+}
+
+.role input[type="checkbox"] {
+  width: 15%;
+  height: 15%;
+}
+
+.role input[type="text"],
+.role input[type="number"] {
+  height: 28%;
 }
 
 .fair-card {
@@ -116,7 +128,6 @@
   margin: 0;
   padding: 0;
   width: 100%;
-
 }
 .fair-booking {
   margin: 0;
@@ -135,10 +146,9 @@
   max-width: 400px;
 }
 
-
 .ticket {
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
-  min-width:350px;
+  min-width: 350px;
   border-radius: 5px;
   padding: 0.6rem 1rem;
   margin: 1rem;
@@ -148,8 +158,24 @@
   margin-top: 1rem;
 }
 
+.ticket-button-row {
+  padding: 0 0.4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.8rem;
+  margin-top: 1rem;
+}
+
+.ticket-buttons {
+  width: auto;
+  padding: 0.5rem 1rem;
+  flex: 1;
+  min-width: 120px;
+}
+
 .booked-ticket {
-  margin: 0.5rem 1rem 1rem .5rem;
+  margin: 0.5rem 1rem 1rem 0.5rem;
   border-radius: 5px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
   padding: 1rem;
@@ -161,13 +187,12 @@
 }
 .booked-ticket h4 {
   margin-top: 0;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   margin-left: 3px;
 }
 .line {
   display: flex;
   justify-content: space-between;
-  
 }
 .line p {
   margin-left: 3px;
@@ -176,7 +201,7 @@
 .select-type {
   margin: 1rem 0;
   border: 1px solid var(--accent-color);
-  border-radius: 0.375rem; 
+  border-radius: 0.375rem;
   padding: 0.375rem 2.25rem 0.375rem 0.75rem;
   background-color: var(--card-bg);
   color: var(--text-color);
@@ -238,7 +263,6 @@ h2 {
   width: 100%;
   display: flex;
   justify-content: center;
-  /* margin: 1rem; */
 }
 
 .center button {
@@ -260,14 +284,14 @@ h2 {
   flex-direction: column;
   height: auto;
   width: 17%;
-  row-gap: .6rem;
+  row-gap: 0.6rem;
   padding: 0;
 }
 #cancel-button {
   height: 20%;
 }
 #activate-button {
-  height:80%;
+  height: 80%;
 }
 .description {
   margin-left: 4px;
@@ -289,9 +313,27 @@ h2 {
 }
 
 .align-vertical {
-max-height:300px;
+  max-height: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.hall-buttons,
+.roles-buttons {
+  display: flex;
+  gap: 0.8rem;
+}
+
+.roles-buttons {
+  margin-top: 0.8rem;
+}
+
+.add-error {
+    color: #b00000 !important;
+  font-size: 0.85rem;
+  margin: .8rem 0;
+  text-align: center;
+  display: block;
 }
