--- a/public/stylesheets/auth.css
+++ b/public/stylesheets/auth.css
@@ -17,7 +17,6 @@ form.auth-options {
   box-shadow: none !important;
 }
 
-
 input {
   width: 100%;
   padding: 0.6rem;
@@ -204,9 +203,8 @@ button {
   margin-bottom: 2px;
 }
 .sign-in-form {
-  margin: 0 2rem 0.5rem .5rem;
+  margin: 0 2rem 0.5rem 0.5rem;
 }
-
 
 @media (max-width: 768px) {
   .authentication-card {
@@ -214,7 +212,7 @@ button {
     width: 350px;
     padding: 1rem;
     height: 75%;
-    max-height: 600px;
+    max-height: 700px;
   }
 
   .illustration-panel {
@@ -226,8 +224,8 @@ button {
     max-height: 600px;
   }
   .sign-in-panel {
-    gap:0;
-    margin-bottom: .5rem;
+    gap: 0;
+    margin-bottom: 0.5rem;
   }
 
   .form-panel h2 {
@@ -235,7 +233,7 @@ button {
     margin-top: 0.4rem;
     margin-bottom: 4px !important;
   }
-  .auth-options{
+  .auth-options {
     margin: 0;
   }
   .center-wrapper {
