--- a/public/stylesheets/auth.css
+++ b/public/stylesheets/auth.css
@@ -212,7 +212,8 @@ button {
     width: 350px;
     padding: 1rem;
     height: 75%;
-    max-height: 700px;
+    min-height: 300px;
+    max-height: 600px;
   }
 
   .illustration-panel {
@@ -225,7 +226,12 @@ button {
   }
   .sign-in-panel {
     gap: 0;
+
+    padding-right: 0;
     margin-bottom: 0.5rem;
+  }
+  .sign-in-form {
+    margin: 0 auto;
   }
 
   .form-panel h2 {
@@ -234,10 +240,7 @@ button {
     margin-bottom: 4px !important;
   }
   .auth-options {
-    margin: 0;
-  }
-  .center-wrapper {
-    margin-top: 0;
+    margin: 1.5rem auto;
   }
 
   .form-panel p,
@@ -266,4 +269,8 @@ button {
 }
 .authentication-header h1 {
   margin-bottom: 0.4rem !important;
+}
+
+.center-wrapper a {
+  padding-bottom: 1rem;
 }
