--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -8,7 +8,7 @@
   border-radius: 12px;
   max-width: 700px;
   min-height: 400px;
-  max-height: 500px;
+  max-height: 600px;
   background-color: var(--card-bg);
 }
 
@@ -91,7 +91,8 @@ h4 {
 }
 
 .password-buttons,
-.update-buttons, .booked-ticket-buttons {
+.update-buttons,
+.booked-ticket-buttons {
   display: flex;
   gap: 0.5rem;
 }
@@ -109,7 +110,6 @@ h4 {
   align-items: center;
 }
 
-
 .portfolio-button {
   width: 50%;
 }
@@ -119,7 +119,6 @@ h4 {
 
 .center-wrapper {
   align-items: flex-end;
-  margin-bottom: 1rem;
 }
 
 label {
@@ -151,4 +150,8 @@ label {
 
 .file-name {
   font-size: 14px;
+}
+
+.line + p {
+  margin-left: 0;
 }
