--- a/public/stylesheets/fairs.css
+++ b/public/stylesheets/fairs.css
@@ -12,9 +12,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: auto;
+  height: 100%;
   width: 100%;
-  padding: 2rem;
+  padding: 2rem 0;
   margin: 0;
   gap: 1rem;
   flex-wrap: wrap;
@@ -28,9 +28,10 @@
   padding: 1rem 1rem;
   border-radius: 8px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
-  width: 33%;
+  width: 25%;
+  max-width: 350px;
   height: 20rem;
-  max-width: 22rem;
+
   overflow: auto;
   background-color: var(--card-bg);
 }
@@ -111,19 +112,20 @@
   overflow-y: auto;
   width: 80%;
   height: 100%;
-  max-width: 650px;
+  max-width: 800px;
   max-height: 400px;
   padding: 0;
   background-color: var(--card-bg);
 }
 .fair-description {
+  position: sticky;
   margin: 0;
   align-items: center;
   padding: 1rem;
   margin-right: 0.8rem;
   border-radius: 10px;
-  width: 50%;
-  height:auto;
+  width: 40%;
+  height: fit-content;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 .fair-options {
@@ -131,13 +133,14 @@
   padding: 0;
   width: 100%;
   height: auto;
+  overflow-x: hidden;
   overflow-y: auto;
 }
 .fair-booking {
   margin: 0;
   padding: 0;
   min-width: 400px;
-  height:100%;
+  height: 100%;
   width: 100%;
 }
 
