--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -24,6 +24,7 @@
   cursor: pointer;
   height: auto;
   width: 100px;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
 }
 
 h4 {
@@ -31,12 +32,11 @@ h4 {
 }
 .details-wrapper {
   flex: 1;
-  margin-top: 0.5rem;
   padding: 1rem 0 1rem 1rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  min-height: 400px;
+  min-height: 250px;
   max-height: 500px;
   width: 100%;
   overflow-y: auto;
@@ -154,4 +154,11 @@ label {
 
 .line + p {
   margin-left: 0;
+}
+
+#expired {
+  margin-top: 3px;
+  margin-bottom: 0;
+  margin-left: 6px;
+  color: red;
 }
